2000-09-04  Richard Braakman  <dark@wapit.com>

	* Changes prompted by code review:

	* gwlib/gwthread.h, gwlib/gwthread-pthread.h: Rename Threadfunc
	to gwthread_func_t.

	* gwlib/parse.h, gwlib/parse.c, gw/wsp_headers.c: Rename Context
	to ParseContext.

	* gwlib/gwmem-check.c: Give symbolic names to the memory-filling
	patterns it uses.

	* gwlib/conn.h: Improve comments.

2000-09-04  Richard Braakman  <dark@wapit.com>

	* Making release 0.11.1.

2000-09-04  Derry Hamilton <rasilon@tardis.ed.ac.uk>
	
	* gw/wml_compiler.c: reformatted my earlier patch.

2000-09-03  Lars Wirzenius  <liw@iki.fi>

	* gw/wml_compiler.c: Removed unnecessary call to gw_assert:
	list_create is defined as always returning non-NULL, so it's not
	necessary to check it. (Or if we do, we should check it everywhere.)

	* gwlib/list.c: Removed unused variable from lock(). Also
	re-did the change to list_len in my own coding style, just to
	be pedantic.

	* I assume these were leftovers from Derry's debugging.

2000-09-01  Derry Hamilton <rasilon@tardis.ed.ac.uk>

	* gwlib/list.c: Added a test for NULL list to list_len since some
	things want the length of NULL lists.
	* gw/wml_compiler.c: string_table_build no longer tries to add 
	strings to the stringtable if the list is NULL.

2000-08-31  Lars Wirzenius  <liw@iki.fi>

	* wmlscript/wsencode.c: Added a typecast to convert a va_arg call
	that fetches an int to convert the value to an unsigned char *.

2000-08-31  Lars Wirzenius  <liw@iki.fi>

	* gwlib/http.c: Improved (but still did not write properly) HTTP
	Content-Type header parsing. Fix suggested by Joerg Pommnitz,
	though re-did the patch to add some error checking.
	
	* test/test_http.c: Parse and report Content-Type. Also, http_get_real
	now wants a non-NULL request header list. Give it that.
	
	* test/test_http_server.c: Report a character set (UTF-8, though
	it doesn't really matter) so that the parsing can be tested.

2000-08-31  Lars Wirzenius  <liw@iki.fi>
